--- a/JavaScript_With_HTML_Code/OOPs_In_JavaScript/Class_Objects/class.html
+++ b/JavaScript_With_HTML_Code/OOPs_In_JavaScript/Class_Objects/class.html
@@ -7,7 +7,7 @@
 </head>
 <body>  
     <h1>Class & Objects in JavaScript Example</h1>
-    <button onclick="s1.showDetails()">Show Details</button>
+    <button type="button" onclick="s1.showDetails()">Show Details</button>
     <p id="demo"></p>
 
 
