Class and object on HTML page

--- a/JavaScript_With_HTML_Code/OOPs_In_JavaScript/Class_Objects/class.html
+++ b/JavaScript_With_HTML_Code/OOPs_In_JavaScript/Class_Objects/class.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class & Objects in JavaScript</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            color: white;
+            text-align: center;
+            background-color: darkgreen;
+        }
+        #demo {
+            font-size: 18px;
+            color: darkblue;
+            background-color: lightgray;
+            font-weight: bold;
+        }   
+    </style>
 </head>
 <body>  
     <h1>Class & Objects in JavaScript Example</h1>
-    <button type="button" onclick="s1.showDetails()">Show Details</button>
     <p id="demo"></p>
-
 
     <script src="class.js"></script>
 </body>
