--- a/JavaScript_With_HTML_Code/OOPs_In_JavaScript/Class_Objects/class.html
+++ b/JavaScript_With_HTML_Code/OOPs_In_JavaScript/Class_Objects/class.html
@@ -26,7 +26,7 @@
 </head>
 <body>  
     <h1>Class & Objects in JavaScript Example</h1>
-    <p id="demo"></p>
+    <h3 id="demo"></h3>
 
     <script src="class.js"></script>
 </body>
