--- a/JavaScript_With_HTML_Code/first.html
+++ b/JavaScript_With_HTML_Code/first.html
@@ -13,6 +13,12 @@ document.write(10+20);
 document.write("<br>");
 document.write("<h1 style='color:blue;'>Hello World!</h1>");
 </script>
+
+<p id="demo">Hello</p>
+
+<script>
+document.getElementById("demo").innerHTML = "Hi JavaScript!, Welcome to the world of programming.";
+</script>
 </body>
 </html>
 
