--- a/JavaScript_With_HTML_Code/index.html
+++ b/JavaScript_With_HTML_Code/index.html
@@ -10,6 +10,8 @@
     <input type="text" placeholder="Second value" id="num2">
     <button onclick="multiplyTwoNum()">Multiply</button>
     <p id="result"></p>
+<br>
+    <p id="demo">My name is Eshwara Naik G</p>
 
     <script src="script.js"></script>
 </body>
